--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script>
+        <h1>Hammad Ali</h1>
         // for (i = 0; i < 3; i++) {
         //     console.log("*");
         //     for (j = i; j < 10; j++) {
